--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ button:nth-child(2):hover {
   color: black;
 }
 .allControl {
+  margin-top: 40px;
   text-align: center;
   width: 400px;
   display: inline-block;
