--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
 .timeBackground {
   border: 5px solid black;
   background-color: #1f1f1f;
-  
   margin: 0 auto;
   border-radius: 10px;
   text-align: center;
@@ -84,10 +83,10 @@ button:nth-child(2):hover {
 }
 .allControl {
   position: absolute;
-  top: 200px;
+  top: 450px;
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 300px;
 }
 .allControl button {
   margin-top: 8px;
@@ -104,22 +103,14 @@ button:nth-child(2):hover {
   margin: 0 auto;
   }
   .allControl {
+    position: absolute;
+    top: 600px;
   width: 300px;
   text-align: center;
 }
   .allControl button {
   padding: 10px 40px;
 }
-}
-
-@media only screen and (min-height: 300px) {
-  .allControl {
-  top:600px;
-  display: block;
-  width: 300px;
-  text-align: center;
-}
-  
 }
 
 
