--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: gray;
+  background: radial-gradient( green, blue);
 }
 .timeBackground {
   border: 5px solid black;
@@ -84,17 +84,23 @@ button:nth-child(2):hover {
 .allControl {
   position: absolute;
   top: 450px;
-  display: flex;
+  text-align: center;
   flex-direction: column;
   width: 300px;
 }
 .allControl button {
   margin-top: 8px;
+  padding: 10px 40px;
 }
 #pauseAll {
   display: none;
 }
-
+@media only screen and (min-width: 740px) {
+  .allControl {
+    position: absolute;
+    top: 100px;
+}
+}
 @media only screen and (max-width: 740px) {
   body {
     flex-direction: column;
@@ -104,7 +110,7 @@ button:nth-child(2):hover {
   }
   .allControl {
     position: absolute;
-    top: 600px;
+    top: 550px;
   width: 300px;
   text-align: center;
 }
@@ -113,4 +119,34 @@ button:nth-child(2):hover {
 }
 }
 
+@media screen and (max-height: 320px), screen and (max-width: 740px) {
+.allControl {
+    position: absolute;
+     flex-direction: column;
+    justify-content: center;
+    top: 200px;
+  width: 300px;
+  text-align: center;
+}
+}
+@media only screen and (min-height: 320px), screen and (max-width: 320px) {
+  .allControl {
+    position: absolute;
+     flex-direction: column;
+    justify-content: center;
+    top: 550px;
+  width: 300px;
+  text-align: center;
+}
+}
 
+@media only screen and (min-height: 640px), screen and (min-width: 741px) {
+  .allControl {
+    position: absolute;
+     flex-direction: column;
+    justify-content: center;
+    top: 450px;
+  width: 300px;
+  text-align: center;
+}
+}
